conik/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conik-backend
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: conik
  template:
    metadata:
      labels:
        app: conik
    spec:
      containers:
        - name: conik
          ports:
            - containerPort: 8080
          image: 285816336668.dkr.ecr.ap-northeast-2.amazonaws.com/conik-ecr:47687f22364d6d2dca94387575b437ba95268735
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
