conik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: conik-service
spec:
  selector:
    app: conik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
